# sdk

./: .gitignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  biome.jsonc  eslint.config.mjs  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: submit-mcp-to-registry-request.md
.github/workflows/: ci.yml  npm-publish.yml  publish-create-smithery.yml  publish-python.yml  publish-ts.yml  publish.yml  python-test.yml  release-doctor.yml  sdk-generation.yaml  sdk_generation.yaml  sdk_publish.yaml  update-packages.yml
agents/: publish_workflow.md
examples/: agent.ts  shell.ts  simple.ts  test-agent.ts
examples/basic-server/: AGENTS.md  README.md  package-lock.json  package.json
examples/basic-server/src/: index.ts
examples/coffee-explorer/: README.md
examples/coffee-explorer/app/server/: types.ts
examples/coffee-explorer/app/shared/: types.ts
examples/coffee-explorer/app/web/: package.json
examples/local-filesystem/: AGENTS.md  package-lock.json  package.json
examples/local-filesystem/.smithery/: index.cjs
examples/open-ai-cafe-explorer/: .gitignore  package-lock.json  package.json  tsconfig.json
examples/open-ai-cafe-explorer/app/server/: index.ts
examples/open-ai-cafe-explorer/app/shared/: types.ts
examples/open-ai-cafe-explorer/app/web/: package-lock.json  package.json
examples/open-ai-coffee-explorer/: .gitignore  package-lock.json  package.json
examples/open-ai-coffee-explorer/app/server/: data.ts  index.ts
examples/open-ai-coffee-explorer/app/web/: .env  package-lock.json  package.json  tsconfig.json
examples/open-ai-hello-server/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  smithery.yaml  tsconfig.json
examples/open-ai-hello-server/app/server/: index.ts  (+1 more)
examples/open-ai-solar-system/: .gitignore  README.md  package-lock.json  package.json
examples/open-ai-tic-tac-toe/: .gitignore  README.md  package-lock.json  package.json
examples/tic-tac-toe/: smithery.yaml
mcps/agent/: package.json  tsconfig.json
mcps/agent/src/: index.ts
mcps/e2b/: package.json
mcps/e2b/src/: index.ts
mcps/exa/: index.ts  package.json  tsconfig.json
mcps/exa/src/: index.ts
mcps/fs/: index.ts  package.json  tsconfig.json
mcps/fs/src/: index.ts
mcps/shell/: package.json  tsconfig.json
mcps/shell/src/: index.ts
openapi/: registry.yaml
python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
python/agents/: testing-workflow.md
python/examples/: patched_demo.py  server.py  simple_patched_demo.py  stateful_server.py  stateless_server.py
python/scaffold/: AGENTS.md  Dockerfile  README.md  pyproject.toml  smithery.yaml
python/scaffold/.smithery/: server.py
python/scaffold/src/: server.py
python/scaffold/src/hello_server/: server.py
python/smithery/: __init__.py  url.py
python/smithery/cli/: build.py
python/smithery/server/: fastmcp_patch.py  patched_fastmcp.py  stateful.py  stateless.py
python/src/: __init__.py
python/src/cli/: build.py
python/src/runtime/: __init__.py  shttp_bootstrap.py  stdio_bootstrap.py
python/src/server/: fastmcp_patch.py
python/src/smithery/: __init__.py  decorators.py
python/src/smithery/cli/: __init__.py  build.py  create.py  dev.py  helpers.py  init.py  main.py  playground.py  run.py  start.py
python/src/smithery/runtime/: shttp_bootstrap.py  stdio_bootstrap.py
python/src/smithery/server/: __init__.py  fastmcp_patch.py  middleware.py
python/src/smithery/utils/: config.py  console.py  network.py  project.py  responses.py  server.py  url.py
python/src/utils/: __init__.py
python/tests/: __init__.py  test_context_patching.py  test_cors.py  test_integration.py  test_session_config_middleware.py  test_well_known_endpoint.py
python/tests/utils/: version_utils.py
scripts/: build
scripts/utils/: postprocess-files.cjs
src/: anthropic.ts  client.ts  config.ts  core.ts  forward.ts  index.ts  multi-client.ts  openai.ts  registry-types.ts  registry.ts  transport.ts  types.ts
src/_shims/: README.md  index-deno.ts  index.d.ts  index.js  index.mjs  manual-types.d.ts  registry.ts  web-runtime.ts
src/core/: api-promise.ts  error.ts  resource.ts
src/examples/: README.md  blacksmith.ts  shell.ts  simple.ts
src/integrations/: error-adapter.ts
src/integrations/llm/: anthropic.ts  openai.ts
src/internal/: parse.ts  shims.ts  uploads.ts
src/internal/utils/: base64.ts  log.ts  path.ts  values.ts
src/resources/: pets.ts
src/resources/store/: order.ts  store.ts
src/server/: builder.ts  types.ts
src/types/: index.ts
tests/: base64.test.ts  buildHeaders.test.ts  form.test.ts  index.test.ts  path.test.ts  responses.test.ts  stringifyQuery.test.ts  uploads.test.ts
tests/api-resources/: pets.test.ts  user.test.ts
tests/api-resources/store/: order.test.ts  store.test.ts
tests/qs/: stringify.test.ts  utils.test.ts
typescript/: README.md  biome.jsonc  package-lock.json  package.json  tsconfig.json
typescript/create/: .gitignore  README.md  biome.jsonc  index.ts  package-lock.json  package.json  tsconfig.json
typescript/create/scaffold/: AGENTS.md  package.json
typescript/registry/: FUNCTIONS.md  README.md  RELEASES.md  USAGE.md  jsr.json  package-lock.json  package.json
typescript/registry/.devcontainer/: README.md  setup.sh
typescript/registry/.speakeasy/: gen.yaml  speakeasy-modifications-overlay.yaml  workflow.local.yaml  workflow.yaml
typescript/registry/examples/: .env.template  README.md  package-lock.json  package.json  serversList.example.ts  serviceHealthCheck.example.ts  systemCheckHealth.example.ts
typescript/sdk/: README.md  WIDGET_SDK.md  biome.jsonc  package-lock.json  package.json  pnpm-lock.yaml
typescript/sdk/src/: index.ts
typescript/src/: config.ts  transport.ts
typescript/src/client/: transport.ts
typescript/src/integrations/: error-adapter.ts
typescript/src/server/: session.ts  stateful.ts  stateless.ts
typescript/src/shared/: config.ts
(+277 files in other folders)
