[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smithery"
version = "0.1.4"
description = "SDK for using Smithery with Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.13.1"
]
authors = [{ name = "Smithery Team", email = "contact@smithery.ai" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.11",
]

[project.urls]
"Homepage" = "https://github.com/smithery-ai/python-sdk"
"Bug Tracker" = "https://github.com/smithery-ai/python-sdk/issues"

[tool.setuptools]
packages = ["smithery"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
smithery = ["py.typed"]

[project.scripts]
smithery = "smithery.cli.build:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
