 [build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "smithery"
version = "0.3.0"
description = "SDK for using Smithery with Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.13.1",
    "toml>=0.10.2",
    "typer>=0.17.3",
    "art>=6.3",
]
authors = [{ name = "Smithery Team", email = "contact@smithery.ai" }]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.11",
]

[project.urls]
"Homepage" = "https://github.com/smithery-ai/python-sdk"
"Bug Tracker" = "https://github.com/smithery-ai/python-sdk/issues"

[project.scripts]
smithery = "smithery.cli.main:app"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
