[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "smithery"
version = "0.4.2"
description = "SDK for using Smithery with Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toml>=0.10.2",
    "typer>=0.17.3", 
    "art>=6.3",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "starlette>=0.37.0",
]
authors = [{ name = "Smithery Team", email = "contact@smithery.ai" }]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
fastmcp = [
    "mcp>=1.6.0",
    "fastmcp>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/smithery-ai/python-sdk"
"Bug Tracker" = "https://github.com/smithery-ai/python-sdk/issues"

[project.scripts]
smithery = "smithery.cli.main:app"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff==0.12.11",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=4.0.0",
    "packaging>=25.0",
    "mcp>=1.12.4",
    "fastmcp>=2.12.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::DeprecationWarning:fastmcp.*",
    "ignore::PendingDeprecationWarning",
]
