[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "hello-server"
version = "0.1.0"
description = "An MCP server built with Smithery"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.13.1",
    "smithery @ file:///Users/arjun/Documents/github/smithery/sdk/python",
]

[project.scripts]
dev = "hello_server.server:main"

[tool.smithery]
# Server function for Smithery to build
server = "hello_server.server:create_server"


