[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "hello-server"
version = "0.1.0"
description = "An MCP server built with Smithery"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

requires-python = ">=3.10"
dependencies = [
    "mcp>=1.14.0",
    "smithery @ file:///Users/arjun/Documents/github/smithery/sdk/python/",
]

[project.scripts]
# Run the MCP server in development mode
dev = "smithery.cli.dev:main"
# Run server with interactive testing playground
playground = "smithery.cli.playground:main"

[tool.smithery]
# Function that returns a patched FastMCP server
server = "hello_server.server:create_server"